# karonte-nix

./: .gitignore  README.md  default.nix  poetry2nix-remove-problematic-overrides.diff  pyproject.toml  shell.nix
.github/workflows/: fmt.sh
nix/: sources.json
